# sync-my-youtube-playlists

./: .gitignore  README.md  classify_music_or_video.py  get_meta_of_liked.fish  pyproject.toml  sync.py
liked/: classify_music_or_video.py  dev  get_meta.fish  get_meta_from_roster.py  parse_classifications.py  parse_std.py  prompt_and_examples.json  taste.py
