[project]
name = "sync-my-youtube-playlists"
version = "0.1.0"
description = "sync-my-youtube-playlists"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
shared = [
    "yt-dlp>=2025.10.22",
]
dev = [
    "textual-dev>=1.8.0",
]
normal = [
    { include-group = "shared" },
    "gpt-arbiter-human-in-loop",
]
daniel = [
    { include-group = "shared" },
    { include-group = "dev" },
    "gpt-arbiter-human-in-loop",
]

[tool.uv]
default-groups = ["normal"]
conflicts = [[{ group = "normal" }, { group = "daniel" }]]

[tool.uv.sources]
gpt-arbiter-human-in-loop = [
    { git = "https://github.com/Daniel-Chin/GPT-Arbiter-Human-in-Loop.git", group = "normal" },
    { path = "/home/dan/gpt-arbiter-human-in-loop", group = "daniel" },
]
